# SimpleWeatherStation

./: .gitignore  CMakeLists.txt  README
cmake/: cpack_debian.cmake  gdbserver.config  gdbwu_set_access.config  start_gdbserver.sh  stop_gdbserver.sh  toolchain.cmake
docs/buildhost/: README.md  load_manual_packages.sh  load_packages  pkgs_installed.lst  pkgs_manual.lst
docs/targethost/: README.md  pkgs_loaded.lst
docs/weatherunderground/: README.md
src/: CMakeLists.txt  main.cpp  systemd_quietwind_weather.cpp  weather_station_config.cpp  weatherunderground_config.cpp
src/config/: postinst  prerm  quietwind.weather.service  ws_config.json  ws_wu_config.json  wu_access.json
src/include/: systemd_quietwind_weather.h  weather_station.h  weather_station_config.h  weatherunderground_config.h
src/lib/: CMakeLists.txt
src/lib/devices/: CMakeLists.txt
src/lib/devices/i2c/: CMakeLists.txt  i2cbus.cpp  lps22.cpp  lps22.h  sht4x.cpp  sht4x.h
src/lib/devices/i2c/include/: i2cbus.h  lps22.h  sht4x.h
src/lib/units/: CMakeLists.txt  dew_point.cpp  dew_point.h  pressure_datum.cpp  pressure_datum.h  pressure_interface.h  pressure_measurement.cpp  pressure_measurement.h  relative_humidity_datum.cpp  relative_humidity_datum.h  relative_humidity_interface.h  relative_humidity_measurement.cpp  relative_humidity_measurement.h  temperature_datum.cpp  temperature_datum.h  temperature_interface.h  temperature_measurement.cpp  temperature_measurement.h
src/lib/units/humidity/: CMakeLists.txt  relative_humidity.cpp  relative_humidity_measurement.cpp
src/lib/units/humidity/include/: relative_humidity.h  relative_humidity_measurement.h
src/lib/units/pressure/: CMakeLists.txt  inches_mercury.cpp  millibar.cpp  pressure.cpp  pressure_measurement.cpp
src/lib/units/pressure/include/: inches_mercury.h  millibar.h  pressure.h  pressure_measurement.h
src/lib/units/temperature/: CMakeLists.txt  celsius.cpp  fahrenheit.cpp  kelvin.cpp  temperature.cpp  temperature_measurement.cpp
src/lib/units/temperature/include/: celsius.h  fahrenheit.h  kelvin.h  temperature.h  temperature_measurement.h
src/lib/utilities/: CMakeLists.txt
src/lib/utilities/system/: CMakeLists.txt  locking_file.cpp  logger.cpp  systemd.cpp
src/lib/utilities/system/include/: locking_file.h  logger.h  systemd.h
src/lib/utilities/system/systemd/: CMakeLists.txt  README.md  sd_manager_obj.cpp  sd_service_unit_obj.cpp  sd_unit_obj.cpp
src/lib/utilities/system/systemd/include/: sd_manager_obj.h  sd_service_unit_obj.h  sd_unit_obj.h  systemd.h
src/lib/utilities/weather/: CMakeLists.txt  dewpoint.cpp
src/lib/utilities/weather/include/: dewpoint.h
src/lib/weather_underground/: CMakeLists.txt  weather_underground.cpp
src/lib/weather_underground/include/: weather_underground.h
tools/: CMakeLists.txt  file_access_comparison.cpp
